--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
     <artifactId>java-threads</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
