--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.tempus-fugit</groupId>
+            <artifactId>tempus-fugit</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
